# LayoutLens

./: .env.example  .gitignore  README.md  environment.yml  gameplan  pyproject.toml
scripts/: smoke_geometry.py
src/layout_lens/: main.py
src/layout_lens/agents/: deps.py  design_agent.py  room_plan_agent.py  room_plan_repair_agent.py  space_agent.py
src/layout_lens/core/: application.py  settings.py
src/layout_lens/core/geometry/: geometry_rules.py  geometry_service.py  shapely_adapter.py
src/layout_lens/llm/: model_factory.py
src/layout_lens/schemas/: base.py  design.py  room_plan.py  space.py
src/layout_lens/utilities/: utilities.py
unreal/Plugins/LayoutLensImporter/: LayoutLensImporter.uplugin
unreal/Plugins/LayoutLensImporter/Source/LayoutLensImporter/: LayoutLensImporter.Build.cs
unreal/Plugins/LayoutLensImporter/Source/LayoutLensImporter/Private/: LayoutLensImporter.cpp  LayoutLensPlaceholderActor.cpp  LayoutLensRoomPlanTypes.h  LayoutLensVisualizerActor.cpp  SSLayoutLensOverlayWidget.cpp  SSLayoutLensOverlayWidget.h
unreal/Plugins/LayoutLensImporter/Source/LayoutLensImporter/Public/: LayoutLensImporter.h  LayoutLensPlaceholderActor.h  LayoutLensVisualizerActor.h
